2001-12-21  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_url.c: Brand new rfc2396 compliant url parsing code.

2001-12-20  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_fileutils.c: Many many lock related changes. Locks now
	working. Interface change to allow the discriminatin between "lock
	held" failure and general failure. Admin file removed when empty.

2001-12-19  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_run.c (bk_run_on_demand_add): Set brof key (DOH!)
	(bk_run_on_demand_remove): Actutally destroy brof you are removing.

	* lib/b_pollio.c (bk_polling_io_create): Sigh. Fully initialize
	structure (despite memset()) in order to pacify insight.
	(bk_polling_io_close): Lingering close.
	(bk_polling_io_close): Close out ioh too.
	(polling_io_ioh_handler): Don't destroy bpi if asked not too
	(lingering close).
	(bk_polling_io_data_destroy): We only need to destroy one vptr.

	* lib/b_ioh.c (ioh_execute_cmds): Make sure you clear and destroy
	the dll regardless of content of nodes.

	* lib/b_bnbio.c (bk_iohh_bnbio_close): Lingering close.

2001-12-14  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_ioh.c: Convert messages to use structures and dll's
	instead of an OR'ed integer.

2001-12-13  James Tanis  <jtt@saint.sysdetect.com>

	* include/libbk.h (enum): BkIohStatusIohAbort removed owing to non-use.

2001-12-12  James Tanis  <jtt@saint.sysdetect.com>

	* include/libbk.h (bk_ioh_status_e): Convert ioh handler status to
	an enum and update everybody who uses it.

	* lib/b_ioh.c: Rename bk_iohhandler, bk_iohhandler_f to bring it
	line with standards docs.

	* lib/b_run.c (bk_run_once): Support for aborting bk_run_once if
	another bk_run_once() has exited on the "thread" this bk_run_once
	has just processed.

2001-12-11  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_ioh.c (bk_ioh_destroy): make this static.

	* src/bttcp.c (connect_complete): noone other than ioh.c should
	use bk_ioh_destroy.
